# graph_attention_student

./: .gitignore  CLAUDE.md  DESIGN_CHOICES.rst  HISTORY.rst  README.rst  _pyproject_uv.toml  noxfile.py  poetry.toml  pyproject.toml  ruff.toml  test_data.csv
.github/workflows/: run_test.yml  test.yml
adr/: 001-random-access-data-stores.md  README.md
custom_model/: README.rst  generate_molecule_dataset_from_csv__custom.py
graph-attention-student/: __init__.py
graph_attention_student/: README.rst  __init__.py  _models.py  cli.py  data.py  fidelity.py  keras.py  layers.py  metrics.py  models.py  testing.py  training.py  typing.py  util.py  utils.py  visualization.py
graph_attention_student/assets/: molecule_processing.py
graph_attention_student/datasets/: dataset-E.csv
graph_attention_student/datasets/Multitask/: Multitask.csv
graph_attention_student/datasets/aqsoldb/: A-100.json  A-1000.json  A-1002.json  A-1003.json  A-1004.json  A-1005.json  A-1006.json  A-101.json  A-1011.json  A-1013.json  A-1015.json  A-1016.json  A-1021.json  A-1022.json  A-1024.json  A-1025.json  A-1027.json  A-1029.json  A-1030.json  A-1032.json  A-1033.json  A-1034.json  A-1038.json  A-1043.json  A-1050.json  A-1051.json  A-1052.json  A-1053.json  A-1056.json  A-1058.json  A-1059.json  A-106.json  A-1060.json  A-1065.json  A-1068.json  A-1076.json  A-1080.json  A-1085.json  A-1088.json  A-1091.json  (+8170 more)
graph_attention_student/datasets/movie_reviews/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  (+1961 more)
graph_attention_student/datasets/quantum_optics/: 1000020.json  1000227.json  1000270.json  100028.json  100052.json  1000748.json  1000924.json  1000969.json  1001006.json  1001041.json  1001048.json  1001082.json  1001169.json  1001247.json  1001300.json  1001358.json  1001574.json  1001581.json  1001597.json  1001613.json  1001619.json  1001649.json  1001881.json  1001882.json  1001938.json  1002025.json  1002027.json  1002037.json  1002066.json  1002154.json  1002186.json  1002217.json  100222.json  1002231.json  1002233.json  1002246.json  1002283.json  1002315.json  1002431.json  1002436.json  (+19960 more)
graph_attention_student/datasets/rb_dual_motifs/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  (+4960 more)
graph_attention_student/datasets/solubility_aqsoldb/: A-10.json  A-100.json  A-1000.json  A-1002.json  A-1003.json  A-1004.json  A-1005.json  A-1006.json  A-1007.json  A-1009.json  A-101.json  A-1011.json  A-1013.json  A-1014.json  A-1015.json  A-1016.json  A-1018.json  A-1021.json  A-1022.json  A-1024.json  A-1025.json  A-1027.json  A-1029.json  A-1030.json  A-1032.json  A-1033.json  A-1034.json  A-1038.json  A-1041.json  A-1043.json  A-1050.json  A-1051.json  A-1052.json  A-1053.json  A-1056.json  A-1058.json  A-1059.json  A-106.json  A-1060.json  A-1062.json  (+8768 more)
graph_attention_student/examples/: 00_basic_usage.ipynb  00_quickstart.py  01_full_example.ipynb  01_train_custom.py  02_saving_models.py  03_loading_models.py  04_counterfactuals.py  05_predict_smiles.py  README.rst  clogp.csv  gnes_example.py  gnnx_example.py  regression.py  smiles_example.py  smiles_multitask_example.py  solubility_regression.py  vgd_multitask.py  vgd_multitask_gnn.py  vgd_multitask_gnn__gatv2.py  vgd_multitask_gnn__gatv2_multi.py  vgd_multitask_gnn__gin.py  vgd_multitask_gnn_gatv2.py  vgd_multitask_gnn_gin.py  vgd_multitask_megan.py  vgd_multitask_megan_tadf.py  vgd_torch__megan__custom.py
graph_attention_student/examples/assets/: aqsoldb_process.py
graph_attention_student/experiments/: README.md  README.rst  analyze_ensemble.ipynb  analyze_ex_01.ipynb  analyze_ex_02.ipynb  classification.py  explain.ipynb  movie_reviews_multi.py  plot_explanations.py  plot_explanations__megan.py  plot_explanations__megan__compas.py  plot_explanations__megan__fia_49.py  plot_explanations__megan__mutagenicity.py  plot_explanations__megan__tadf.py  process_aqsoldb.py  rb_motifs_multi.py  rb_motifs_single.py  regression.py  solubility_multi.py  tabular_attention.py  template_sub_experiment.py  train_model.py  train_model__megan.py  train_model__megan__aqsoldb.yml  vgd_classification.py  vgd_classification_megan.py  vgd_multi_regression_megan.py  vgd_regression_posthoc.py  vgd_regression_supervised.py  vgd_regression_supervised_multi.py  vgd_regression_supervised_single.py  vgd_single.py  vgd_single__megan.py  vgd_single__megan2.py  vgd_single__megan2__aqsoldb.py  vgd_single__megan2__logp.py  vgd_single__megan__aqsoldb.py  vgd_single__megan__rb_motifs.py  vgd_single_gnnx.py  vgd_single_gnnx_aqsoldb.py  (+27 more)
graph_attention_student/experiments/assets/: README.rst
graph_attention_student/models/: __init__.py  baseline.py  gnes.py  gnnx.py  gradient.py  mappers.py  megan.py  utils.py
graph_attention_student/templates/: article.tex.j2  logo_image.txt  logo_text.txt  megan_prediction_report.css.j2  megan_prediction_report.html.j2  table.tex.j2  table_content.tex.j2  table_element_mean.tex.j2
graph_attention_student/torch/: __init__.py  _legacy.py  advanced.py  data.py  layers.py  megan.py  model.py  utils.py
tests/: test_data.py  test_fidelity.py  test_metrics.py  test_models_megan.py  test_testing.py  test_torch_advanced.py  test_torch_data.py  test_torch_layers.py  test_torch_megan.py  test_torch_model.py  test_util.py  test_visualization.py  util.py
tests/artifacts/: README.md
tests/assets/: test.csv  test.sdf
(+112 files in other folders)
