[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graph_attention_student"
version = "0.15.1"
description = "MEGAN: Multi Explanation Graph Attention Network"
license = "MIT"
authors = ["Jonas Teufel <jonseb1998@gmail.com>"]
maintainers = ["Jonas Teufel <jonseb1998@gmail.com>"]
# readme = "README.rst"
keywords = ["graph neural network", "attention", "kgcnn"]
packages = [
    { include = "graph_attention_student" }
]
include = [
    "README.rst",
    "CHANGLELOG.rst",
    "graph_attention_student/VERSION",
]
exclude = [
    "graph_attention_student/experiments/results",
    "graph_attention_student/examples/results",
    "venv"
]

[tool.poetry.scripts]
graph_attention_student = 'graph_attention_student.cli:cli'

[tool.poetry.dependencies]
python = ">=3.10.0,<3.16"
pycomex = ">=0.9.2"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
matplotlib = ">=3.5.3"
seaborn = ">=0.13.1"
imageio = ">=2.19.0"
cairosvg = ">=2.5.2"
numpy = ">=1.22.0"
tensorflow = "<=2.12.0"
kgcnn = "==2.2.4"
nltk = ">=3.7"
rdkit = ">=2022.9.1"
orjson = ">=3.8.0"
poetry-bumpversion = ">=0.3.0"
umap-learn = ">=0.5.3"
visual_graph_datasets = ">=0.11.0"
vgd_counterfactuals = ">=0.1.0"
hdbscan = ">=0.8.33"
torch = "==2.1.2"
torch_scatter = "==2.1.2"
torch_geometric = "==2.4.0"
lightning = "==2.1.3"

[tool.poetry_bumpversion.file."graph_attention_student/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.poetry_bumpversion.file."graph_attention_student/VERSION"]
search = "{current_version}"
replace = "{new_version}"