[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "graph_attention_student"
version = "1.0.0"
description = "MEGAN: Multi Explanation Graph Attention Network"
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"}
]
maintainers = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"}
]
keywords = [
    "graph neural network",
    "attention",
    "pytorch",
    "explainable ai",
    "graph attention",
    "molecular property prediction",
    "deep learning",
    "machine learning",
    "chemistry",
    "interpretability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

# --- Dependencies ---
requires-python = ">=3.8,<3.14"
dependencies = [
    "pycomex>=0.21.0",
    "click>=7.1.2",
    "jinja2>=3.0.3",
    "matplotlib>=3.5.3",
    "seaborn>=0.13.1",
    "imageio>=2.19.0",
    "cairosvg>=2.5.2",
    "numpy>=1.22.0,<2.0.0",
    "nltk>=3.7",
    "rdkit>=2022.9.1",
    "orjson>=3.8.0",
    "poetry-bumpversion>=0.3.0",
    "umap-learn>=0.5.3",
    "visual_graph_datasets>=0.17.0",
    "vgd_counterfactuals>=0.1.0",
    "hdbscan>=0.8.33",
    "torch>=2.1.2,<2.5.1",
    "torch_geometric>=2.4.0",
    "lightning>=2.1.3",
    "polars>=1.0.0",
    "weasyprint >=57.1",
    "pydyf<0.11.0; python_version<'3.9'",
]

# --- Executable scripts ----
[project.scripts]
# graph_attention_student = "graph_attention_student.cli:cli"
megan = "graph_attention_student.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["graph_attention_student"]
include = [
    "README.rst",
    "CHANGLELOG.rst",
    "graph_attention_student/VERSION",
]
exclude = [
    "graph_attention_student/experiments/results",
    "graph_attention_student/examples/results",
    "venv",
]

# --- Ruff configuration ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

# --- bumpversion configuration ---
[tool.bumpversion]
current_version = "1.0.0"
parse = "(?<![=<>])(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = true
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
files = [
    { filename = "pyproject.toml", search = "version = \"{current_version}\"", replace = "version = \"{new_version}\"" },
    { filename = "README.rst" },
    { filename = "graph_attention_student/VERSION" },
]